# chess-transform

./: .gitignore  CONTRIBUTING.md  PROBE_SYSTEM_SUMMARY.md  README.md  adaptive_run.py  analyze_layers.py  build_runs_data.py  chess_transformer.py  configs.example.py  configs.py  datasets.py  evaluate_saved_probe.py  grpo_sweep.py  gui.py  initialize_training.py  kv_cache.py  moves_list.py  prepare_datasets.py  publish_game.py  pyproject.toml  requirements.txt  rl_train.py  run_example_probe.sh  script.py  test_import.py  test_probe_system.py  testing_model  testing_model.py  todo.md  train.py  train_probe.py  training.py  transformer.py  ttt_baseline.py  ttt_encoder.py  ttt_gui.py  utils.py
chess_seq/: __init__.py  chess_utils.py  configs.py  datasets.py  encoder.py  game_engine.py  models.py  pyproject.toml  testing_model.py  training.py  utils.py
data/: lichess_elite_2024-06.csv  lichess_elite_2024-06_train.csv  move_encoder.pkl
probes/: PROBE_QUICKSTART.md  PROBE_TRAINING.md  analyze_layers.py  evaluate_saved_probe.py  test_probe_system.py  train_probe.py
reports/: magnus_report.md
scripts/: download_games.py  prune_checkpoints.py  report_train_npz.py  strip_optimizer_scheduler.py  test_model_on_pgn.py  visualize_attention_ivanchuk.py  visualize_knight_attention.py  visualize_ui.py
tests/: test_compareQwen.py  test_hf_end_to_end.py  test_load.py  test_overfit.py  test_shim_imports.py
tools/: convert_checkpoint_to_safetensors.py  evaluate_model.py  evaluation_report_model.py  generate_report_markdown.py  make_config.py  publish_game.py  upload_to_hf.py
(+58 files in other folders)
