[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess_seq"
version = "0.1.0"
description = "A Transformer-based chess move prediction model"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["chess", "transformer", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.24.0",
    "python-chess>=1.999",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chess_seq*"]